--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,8 +5,9 @@
 
 
 	<!-- Spring Security -->
-	<!-- filtre DelegatingFilterProxy : Toutes les requêtes HTTP passent par ce filtre -->
-	
+	<!-- filtre DelegatingFilterProxy : Toutes les requêtes HTTP passent par 
+		ce filtre -->
+
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -15,7 +16,7 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+
 	<!-- The definition of the Root Spring Container shared by all Servlets 
 		and Filters -->
 	<context-param>
@@ -38,10 +39,13 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	<error-page>
+		<error-code>403</error-code>
+		<location>/login</location>
+	</error-page>
 
 </web-app>
