--- a/EShop-Demo-v1-Spring-JavaConfig/pom.xml
+++ b/EShop-Demo-v1-Spring-JavaConfig/pom.xml
@@ -3,15 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	
-	  <parent>
-    <groupId>net.webapp</groupId>
-    <artifactId>EShop-Demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  
-  <artifactId>EShop-Demo-v1-Spring-JavaConfig</artifactId>
-  <packaging>war</packaging>
+
+	<parent>
+		<groupId>net.webapp</groupId>
+		<artifactId>EShop-Demo</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+
+	<artifactId>EShop-Demo-v1-Spring-JavaConfig</artifactId>
+	<packaging>war</packaging>
 
 
 	<!-- PROPERTIES -->
@@ -26,14 +26,17 @@
 		<maven-compiler-plugin-version>3.5.1</maven-compiler-plugin-version>
 		<maven-war-plugin-version>2.6</maven-war-plugin-version>
 		<maven-dependency-plugin-version>2.10</maven-dependency-plugin-version>
-		
+
 		<tiles-version>3.0.5</tiles-version>
 
 		<org.springframework-version>4.2.5.RELEASE</org.springframework-version>
 		<org.springframework.security-version>4.0.4.RELEASE</org.springframework.security-version>
+		<version.spring-data-jpa>1.6.0.RELEASE</version.spring-data-jpa>
 
-		<org.aspectj-version>1.6.10</org.aspectj-version>
+		<org.aspectj-version>1.8.9</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
+		<version.logback>1.1.2</version.logback>
+
 		<org.hibernate.entitymanager-version>4.3.11.Final</org.hibernate.entitymanager-version>
 		<org.hibernate.validator-version>5.2.2.Final</org.hibernate.validator-version>
 		<mysql-connector-java-version>5.1.6</mysql-connector-java-version>
@@ -81,11 +84,30 @@
 			<artifactId>spring-core</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-		<!-- AOP utilisé pour profiler le temps d'execution des fonction -->
+		
+		<!-- Spring AOP -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
 			<version>${org.springframework-version}</version>
+		</dependency>
+		<!-- AspectJ -->
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>${org.aspectj-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${org.aspectj-version}</version>
+		</dependency>
+
+		<!-- Spring Data JPA -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${version.spring-data-jpa}</version>
 		</dependency>
 
 		<!-- Spring Security -->
@@ -136,12 +158,7 @@
 			<version>1.3.2</version>
 		</dependency>
 
-		<!-- AspectJ -->
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjrt</artifactId>
-			<version>${org.aspectj-version}</version>
-		</dependency>
+
 
 		<!-- Tiles 2 Dependencies -->
 		<dependency>
@@ -170,12 +187,16 @@
 			<version>${tiles-version}</version>
 		</dependency>
 
-		<!-- Logging -->
-		<!-- Journalisation slf4j -->
+		<!-- Logging slf4j/Logback -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${org.slf4j-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${version.logback}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -183,36 +204,7 @@
 			<version>${org.slf4j-version}</version>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${org.slf4j-version}</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
-			<exclusions>
-				<exclusion>
-					<groupId>javax.mail</groupId>
-					<artifactId>mail</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>javax.jms</groupId>
-					<artifactId>jms</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jdmk</groupId>
-					<artifactId>jmxtools</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jmx</groupId>
-					<artifactId>jmxri</artifactId>
-				</exclusion>
-			</exclusions>
-			<scope>runtime</scope>
-		</dependency>
+
 
 		<!-- jAVA @Inject API : injection via l'annotation @Resource -->
 		<dependency>
@@ -224,10 +216,10 @@
 		<!-- Servlet -->
 		<!-- TODO : pass to servlet 3.0 -->
 		<dependency>
-		<groupId>javax.servlet</groupId>
-		<artifactId>javax.servlet-api</artifactId>
-		<version>3.0.1</version>
-		<scope>provided</scope>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
@@ -290,7 +282,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>${maven-war-plugin-version}</version>
 				<configuration>
-					<!-- <webXml>${project.basedir}\src\main\webapp\WEB-INF\web.xml</webXml> -->
+					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
